# Cadbury

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
Downloads/Agent Monitor & Qualifier/aah/backend/: .env.example  dockerfile  pyproject.toml
Downloads/Agent Monitor & Qualifier/aah/backend/aah_api/: __walkthrough__.py  cli.py  cli_promote.py  deps.py  main.py
Downloads/Cadbury (Personal Assistant)/personal-delegates/backend/: .env.example  pyproject.toml
Downloads/Cadbury (Personal Assistant)/personal-delegates/backend/policy/: engine.py
Downloads/Cadbury (Personal Assistant)/personal-delegates/backend/runtime/: event_bus.py
Downloads/Cadbury (Personal Assistant)/personal-delegates/backend/tests/: test_pipeline_stages.py
backend/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/api/routes/: allowlist.py  approvals.py  budgets.py  calendar.py  chat.py  comms.py  contacts.py  delegates.py  digest.py  events.py  finance.py  health.py  learning.py  memory.py  notifications.py  oauth.py  observability.py  pipeline_runs.py  search.py  settings.py  shopping.py  voice.py
backend/config/: settings.py
backend/config/delegate_policies/: calendar.yaml  comms.yaml  finance.yaml  health.yaml  learning.yaml  recruiter.yaml  shopping.yaml
backend/db/: __init__.py  models.py
backend/delegates/calendar/: conflict_checker.py  pipeline.py
backend/delegates/comms/: pipeline.py
backend/delegates/finance/: pipeline.py
backend/delegates/health/: pipeline.py
backend/delegates/learning/: pipeline.py
backend/delegates/recruiter/: drafter.py  pattern_detector.py  pipeline.py  scorer.py  trust_scorer.py
backend/delegates/recruiter/prompts/: draft_response.txt  score_opportunity.txt
backend/delegates/shopping/: pipeline.py
backend/memory/: graph.py  models.py
backend/middleware/: auth.py
backend/migrations/: env.py
backend/migrations/versions/: 0bb44fd43b18_initial_schema.py
backend/observability/: metrics.py
backend/policy/: allowlist.py  budget.py  engine.py  models.py  simulator.py
backend/runtime/: coordinator.py  event_bus.py  kernel.py  tracker.py
backend/skills/: context_compaction.py  llm_client.py
backend/skills/actions/: __init__.py
backend/skills/auth/: token_store.py
backend/skills/calendar/: google.py  mock.py  msgraph.py  multi.py  provider.py
backend/skills/channels/: providers.py
backend/skills/company/: enricher.py
backend/skills/email/: msgraph.py
backend/skills/notifications/: digest_sender.py  telegram.py
backend/skills/speech/: __init__.py  circuit_breaker.py  speech_to_text.py  text_to_speech.py
backend/tests/: conftest.py  test_new_apis.py  test_websocket.py
frontend/: Dockerfile.prod  (+3 more)
(+459 files in other folders)
