[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-delegates"
version = "0.1.0"
description = "Personal Delegates Network — consumer-facing AI agent system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "openai>=1.35.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.1",
    "jsonschema>=4.22.0",
    "sentence-transformers>=3.0.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=42.0.0",
    "sse-starlette>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "websockets>=12.0",
    "groq>=0.11.0",
    "elevenlabs>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
